tests/negative/test_data_redef_local.orb
data Foo {
    x:i32
    y:i32
};

fnc main () () {
    data::global Foo {
        x:i32
        y:i32
    };
};